# hello-world-startos

./: .gitignore  .gitmodules  .pilot-marker-A  .pilot-marker-B  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  check-web.sh  config_rules.yaml  docker_entrypoint.sh  instructions.md  manifest.yaml  manifest_with_actions.yaml  manifest_with_alerts.yaml  manifest_with_config.yaml  manifest_with_dependencies.yaml  package-lock.json  package.json  s9pk.mk  tsconfig.json
.github/workflows/: buildService.yml  release.yml  releaseService.yml  tagAndRelease.yml
assets/: sayHello.sh
assets/compat/: config_rules.yaml  config_spec.yaml
docs/: instructions.md
hello-world/: Cargo.toml
hello-world/src/: index.html  main.rs
scripts/: check-web.sh  deps.ts  embassy.ts
scripts/procedures/: backups.ts  getConfig.ts  healthChecks.ts  main.ts  migrations.ts  properties.ts  setConfig.ts
scripts/services/: getConfig.ts  migrations.ts
src/: __main__.py
startos/: backups.ts  dependencies.ts  index.ts  init.ts  interfaces.ts  main.ts  manifest.ts  properties.ts  sdk.ts  store.ts  utils.ts  vault.ts  wrapperData.ts
startos/actions/: config.ts  helloScript.ts  index.ts  nameToLogs.ts  properties.ts  sayHello.ts  setName.ts  showSecretPhrase.ts
startos/config/: read.ts  save.ts  spec.ts
startos/dependencies/: dependencies.ts
startos/file-models/: config.yml.ts
startos/install/: versionGraph.ts
startos/manifest/: i18n.ts  index.ts
startos/migrations/: index.ts  v0.3.6.0.ts  v4_0_0_1.ts
startos/procedures/: autoConfig.ts  backups.ts  index.ts  (+6 more)
(+38 files in other folders)
