[package]
name = "hello-world"
version = "0.1.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.4", features = ["server", "http1", "http2", "tcp", "stream"] }
tokio = { version = "1.4.0", features = ["full"] }
